// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it render stars correctly 1`] = `
<span>
  <span
    className="icon"
  >
    <i
      aria-hidden="true"
      className="mdi mdi-star"
    />
  </span>
  <span
    className="icon"
  >
    <i
      aria-hidden="true"
      className="mdi mdi-star"
    />
  </span>
  <span
    className="icon"
  >
    <i
      aria-hidden="true"
      className="mdi mdi-star"
    />
  </span>
  <span
    className="icon"
  >
    <i
      aria-hidden="true"
      className="mdi mdi-star"
    />
  </span>
  <span
    className="icon"
  >
    <i
      aria-hidden="true"
      className="mdi mdi-star-outline"
    />
  </span>
</span>
`;

exports[`it render stars correctly 2`] = `
<span>
  <span
    className="icon"
  >
    <i
      aria-hidden="true"
      className="mdi mdi-star-outline"
    />
  </span>
  <span
    className="icon"
  >
    <i
      aria-hidden="true"
      className="mdi mdi-star-outline"
    />
  </span>
  <span
    className="icon"
  >
    <i
      aria-hidden="true"
      className="mdi mdi-star-outline"
    />
  </span>
  <span
    className="icon"
  >
    <i
      aria-hidden="true"
      className="mdi mdi-star-outline"
    />
  </span>
  <span
    className="icon"
  >
    <i
      aria-hidden="true"
      className="mdi mdi-star-outline"
    />
  </span>
</span>
`;

exports[`it render stars correctly 3`] = `
<span>
  <span
    className="icon"
  >
    <i
      aria-hidden="true"
      className="mdi mdi-star"
    />
  </span>
  <span
    className="icon"
  >
    <i
      aria-hidden="true"
      className="mdi mdi-star"
    />
  </span>
  <span
    className="icon"
  >
    <i
      aria-hidden="true"
      className="mdi mdi-star"
    />
  </span>
  <span
    className="icon"
  >
    <i
      aria-hidden="true"
      className="mdi mdi-star"
    />
  </span>
  <span
    className="icon"
  >
    <i
      aria-hidden="true"
      className="mdi mdi-star"
    />
  </span>
</span>
`;
